# MiroFish

./: .gitignore  Cargo.toml  Dockerfile.rust  package.json
backend/: local_graph.db
backend/app/: config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: lite_entity_extractor.py  local_graph.py  local_graph_builder.py  oasis_profile_generator.py  report_agent.py  simulation_manager.py
claude-proxy/: claude_runner.py
crates/mirofish-core/: Cargo.toml
crates/mirofish-core/src/: lib.rs
crates/mirofish-core/src/graph/: builder.rs  entity_reader.rs  local.rs  memory_updater.rs  mod.rs  zep.rs  zep_tools.rs
crates/mirofish-core/src/llm/: client.rs  mod.rs  retry.rs
crates/mirofish-core/src/models/: mod.rs  project.rs  task.rs
crates/mirofish-core/src/ontology/: generator.rs  mod.rs
crates/mirofish-core/src/report/: agent.rs  mod.rs
crates/mirofish-core/src/simulation/: actions.rs  agent.rs  config_generator.rs  engine.rs  manager.rs  mod.rs  profile_generator.rs
crates/mirofish-core/src/text/: file_parser.rs  mod.rs  processor.rs
crates/mirofish-proxy/: Cargo.toml
crates/mirofish-proxy/src/: claude_runner.rs  main.rs
crates/mirofish-server/: Cargo.toml
crates/mirofish-server/src/: config.rs  error.rs  main.rs  middleware.rs  state.rs
crates/mirofish-server/src/routes/: graph.rs  mod.rs  report.rs  simulation.rs
frontend/src/components/: Step2EnvSetup.vue
