[package]
name = "mirofish-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Graph
petgraph = "0.7"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# PDF parsing
pdf-extract = "0.7"

# Markdown
pulldown-cmark = "0.12"

# Retry logic
backon = "1"

# Async traits
async-trait = "0.1"

# Rand
rand = "0.9"
